--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project Development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
     "ExpressJS"
   ],
   "author": "Didier Munezero",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
